--- a/posts/2019-12-29-2020-albums-decade.md
+++ b/posts/2019-12-29-2020-albums-decade.md
@@ -45,7 +45,7 @@ TTNG is a different beast. Ever heard of Math Rock? No, it's not songs about mul
 
 ### The Appleseed Cast
 
-I have a weird love/hate with The Appleseed Cast. Their music isn't bad--in fact it's amazing. Do you ever have one of those bands or songs that remind you of a time in your life? The Appleseed Cast is one of those bands. Around the time their album Illumination Ritual came out I had been hanging out with a girl I really liked. She liked me. But, depression and anxiety was running rampant. I went into a spiral--pushing everyone away (spoiler, this happens a few more times for different reasons). You know, college stuff where we really don't know what we want in life and what we're doing. What was the result? A year lost to isolation and drinking a lot. One winter day, as I was driving home after finishing my classes for the day, I got a text from a friend. I don't remember the exact words. He told me how much of an inspiration I've been to him. After a year of trying to keep everything together I broke down in my white Honda Civic. At this point things began to get better. Spring came and I began to hike after class everyday. A mile. Then more. The Liberty Lake Loop was my favorite coming in at around 8 miles round-trip. My classes ended at 11am. I was generally done with the hike around 5pm. The whole hike I would listen to The Appleseed Cast's latest album over-and-over again, on repeat, for the full 8 miles, every time. The Appleseed Cast will always be associated to the time I went into that abyss, and found my way out. The good and the bad.
+I have a weird love/hate with The Appleseed Cast. Their music isn't bad--in fact it's amazing. Do you ever have one of those bands or songs that remind you of a time in your life? The Appleseed Cast is one of those bands. Around the time their album Illumination Ritual came out I had been hanging out with a girl I really liked. She liked me. But, depression and anxiety was running rampant. I went into a spiral--pushing everyone away (spoiler, this happens a few more times for different reasons). You know, college stuff where we really don't know what we want in life and what we're doing. What was the result? A year lost to isolation and drinking a lot. Spring came and I began to hike after class everyday. A mile. Then more. The Liberty Lake Loop was my favorite coming in at around 8 miles round-trip. My classes ended at 11am. I was generally done with the hike around 5pm. The whole hike I would listen to The Appleseed Cast's latest album over-and-over again, on repeat, for the full 8 miles, every time. The Appleseed Cast will always be associated to the time I went into that abyss, and found my way out. The good and the bad.
 
 <center style="margin: 20px 0px">
 <iframe width="560" height="315" src="https://www.youtube.com/embed/JEfi-uzS6E0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
