feat: add git worktree article

--- a/src/content/post/house-update-2022-2023/index.mdx
+++ b/src/content/post/house-update-2022-2023/index.mdx
@@ -5,7 +5,7 @@ date: "2023-02-22"
 published: false
 ---
 
-import { PhotoGallery } from "../../../components/PhotoGallery.tsx";
+import { PhotoGallery } from "@components/PhotoGallery.tsx";
 
 In March of 2022 I bought my first house. The bushes were overgrown and each wall had a different wallpaper; this was a house built in the 1960's and it looked like it. There was a lot of work that would going to need to be put into this house. My first job in high school was working for my neighbor removing and installing carpet for businesses around the area. Nothing is worse than taking a hot shower after removing tack strips for 12 hours. Also, growing up my dad and I would do projects around the house. That's all to say I felt comfortable DIY-ing the house. This post is to document the work we've put into improving the house, and to show a little bit of the processes.
 
