--- a/src/content/post/git-worktree/index.mdx
+++ b/src/content/post/git-worktree/index.mdx
@@ -25,21 +25,25 @@ Like `git checkout -b` we can create brand new branches by adding the `-b` argum
 
 We can see all the worktrees we've created using the `git worktree list` command.
 
-<script
-  async
-  data-speed="1.4"
-  data-idleTimeLimit="1.5"
-  id="asciicast-4OQWztFetatQAkZblFz7cANUm"
-  src="https://asciinema.org/a/4OQWztFetatQAkZblFz7cANUm.js"></script>
+<div style="height:476px;" class="mb-12">
+  <script
+    async
+    data-speed="1.4"
+    data-idleTimeLimit="1.5"
+    id="asciicast-4OQWztFetatQAkZblFz7cANUm"
+    src="https://asciinema.org/a/4OQWztFetatQAkZblFz7cANUm.js"></script>
+</div>
 
 With our different linked worktrees created, we can change code and switch between isolated instances of our codebase. The changes done in one worktree do not affect the other worktrees.
 
-<script
-  async
-  data-speed="1.4"
-  data-idleTimeLimit="1.5"
-  id="asciicast-mBldDWAWpgHtzmDl1BnsheDuj"
-  src="https://asciinema.org/a/mBldDWAWpgHtzmDl1BnsheDuj.js"></script>
+<div style="height:476px" class="mb-12">
+  <script
+    async
+    data-speed="1.4"
+    data-idleTimeLimit="1.5"
+    id="asciicast-mBldDWAWpgHtzmDl1BnsheDuj"
+    src="https://asciinema.org/a/mBldDWAWpgHtzmDl1BnsheDuj.js"></script>
+</div>
 
 What about if we want to commit and push our changes out to Github? No problem! Git worktree is a way to checkout many branches.
 So once we're done making changes in our worktree we can `git add`, `git commit`, and `git push origin` like if we are working on a different branch.
