fix: readd skip-link and add functional programming video

--- a/src/content/post/intro-functional-programming/index.mdx
+++ b/src/content/post/intro-functional-programming/index.mdx
@@ -5,6 +5,16 @@ date: "2019-03-31"
 published: true
 ---
 
+<iframe
+  width="560"
+  height="315"
+  class="mx-auto mb-4 youtube-video"
+  src="https://www.youtube.com/embed/rCK7y-7n-uA"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  allowfullscreen></iframe>
+
 This post comes from an example I presented at [Boise Code Camp 2019](http://www.boisecodecamp.org/) comparing imperative and functional ways of solving problems. The goal was not to teach functional programming in its entirety, but introduce a different way of thinking that is outside of traditional approaches (loops, mutation, etc). Having a different frame of reference adds more tools to the toolbox when faced with a problem.
 
 The foundation of functional programming can be presented in three main ideas:
