--- a/src/content/post/git-worktree/index.mdx
+++ b/src/content/post/git-worktree/index.mdx
@@ -5,14 +5,13 @@ date: "2023-03-10"
 published: true
 ---
 
-Have you ever been in the middle of coding a feature, and out of nowhere you get a notification that production is down?
-If you're using Git you now have a few options: commit your work, stash your work, or discard your work.
-All these come with their problems depending on the situation.
-If you commit half-baked code you may want to come back later and rebase to clean up your commit history.
-Stashing can cause problems, because what if you need to stash extra code later before switching back to your original feature work?
-I'll throw away my current changes if they're small, but otherwise no thanks.
+Have you ever found yourself in the middle of coding a feature, only to receive a notification that production is down? If you're using Git, you now have a few options: commit your work, stash your work, or discard your work.
+Each of these options has its own set of problems, depending on the situation.
+If you commit half-baked code, you may need to come back later and rebase to clean up your commit history.
+Stashing can also cause problems. What if you need to stash extra code later before switching back to your original feature work?
+As for me, I tend to throw away my current changes if they're small, but otherwise, I prefer not to.
 
-I recently stumbled upon [Git worktree](https://git-scm.com/docs/git-worktree/2.39.0), and it has been an amazing boost in my productivity.
+Recently, I stumbled upon [Git worktree](https://git-scm.com/docs/git-worktree/2.39.0), and it has been an amazing boost to my productivity.
 
 ### What is Git Worktree?
 
