--- a/src/content/post/postgres-is-a-graph-database/index.mdx
+++ b/src/content/post/postgres-is-a-graph-database/index.mdx
@@ -1,13 +1,13 @@
 ---
 title: "Postgres: The Graph Database You Didn't Know You Had"
 tags: ["Postgres", "Database", "Data Structures"]
-date: "2023-03-16"
+date: "2023-03-28"
 published: true
 ---
 
 PostgreSQL (Postgres), is a powerful relational database that can store a wide range of data types and data structures.
 When it comes to storing graph data structures we might reach for a database marketed for that use case like Neo4J or Dgraph. Hold your horses!
-While Postgres is not generally thought of to store graph data structures, it has some built-in features that allow it to store and query graph data efficiently.
+While Postgres is not generally thought of when working with graph data structures, it is perfectly capable to store and query graph data efficiently.
 
 ## Understanding Graph Data Structures
 
@@ -123,17 +123,25 @@ class Edge {
 }
 ```
 
-To give a real-world example, Facebook is a popular social media platform that uses a graph to represent people and their relationships.
+<div class="flex flex-col items-center justify-center mb-6 mt-2">
+  <figcaption class="text-sm text-center">
+    Each node contains a list of its edges, and each edge contains a reference
+    to the next/previous node. As we'll see in SQL later, the nodes don't always
+    need to know about their edges.
+  </figcaption>
+</div>
+
+Facebook is a popular social media platform that uses a graph to represent people and their relationships.
 A person can have friends, and those friends also have their list of friends.
-Each person would be represented as a node, and each friendship would be represented as an edge.
-Graphs can be used to model a lot of different applications like your
+Each person is represented as a node, and each friendship would be represented as an edge.
+Graphs are used to model a lot of different applications like your
 [npm dependencies](https://www.dylanpaulus.com/posts/node-dependency-types),
 [workflows](https://dagster.io/), transportation systems, manufacturing lines, and more!
 
 ## Storing Graph Data Structures in Postgres
 
-To store a graph in Postgres we only need to create two tables: nodes and edges.
-The nodes table will store information about each entity, while the edges table will store information about the relationships between entities.
+To store a graph in Postgres we only need to create two tables: `nodes` and `edges`.
+The `nodes` table will store information about each entity, while the `edges` table will store information about the relationships between entities.
 
 Let's start by creating a `nodes` table:
 
@@ -144,10 +152,10 @@ CREATE TABLE nodes (
 );
 ```
 
-The `nodes` table we defined here has two columns: id and data. The id column is an auto-incrementing integer that serves as the primary key for the table. The data column is a string that stores any additional data associated with the node.
-For this example, we're keeping it simple and only storing a string column, but in real-world applications, this table could have any number of columns.
+The `nodes` table we defined here has two columns: id and data. The id column is an auto-incrementing integer that serves as the primary key for the table. The data column is a string that stores any extra data associated with the node.
+For this example, we're keeping it simple and only storing a string column, but in real-world applications, this table could be anything and have any number of columns.
 
-The most important table in creating a graph data structure is the `edges` table:
+The most important table when creating a graph data structure is the `edges` table:
 
 ```sql
 CREATE TABLE edges (
@@ -157,8 +165,9 @@ CREATE TABLE edges (
 );
 ```
 
-Here, we are creating two columns, `previous_node` and `next_node`, that represent our relationships between nodes. Each of these columns represents a foreign key to a node.
-In a graph an edge can only have one `previous_node` and `next_node` pairing, so we are using a composite primary key to ensure that each edge is unique.
+Here, we are creating two columns, `previous_node` and `next_node`, that represent our relationships between nodes.
+Each of these columns represents a foreign key to a node. The important take away is an `edges` table references two rows in the same table.
+An edge can only have one `previous_node` and `next_node` pairing, so we are using a composite primary key to ensure that each edge is unique and cannot reference itself.
 
 With our tables created, we can now insert data into them.
 
@@ -174,6 +183,54 @@ And then let's connect our nodes with edges:
 INSERT INTO edges (previous_node, next_node) VALUES (1, 2);
 INSERT INTO edges (previous_node, next_node) VALUES (1, 3);
 ```
+
+<table>
+  <thead>
+    <tr>
+      <th colspan="2">nodes</th>
+    </tr>
+    <tr>
+      <th>id</th>
+      <th>data</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>1</td>
+      <td>Bob</td>
+    </tr>
+    <tr>
+      <td>2</td>
+      <td>Hank</td>
+    </tr>
+    <tr>
+      <td>3</td>
+      <td>Jeff</td>
+    </tr>
+  </tbody>
+</table>
+
+<table>
+  <thead>
+    <tr>
+      <th colspan="2">edges</th>
+    </tr>
+    <tr>
+      <th>previous_node</th>
+      <th>next_node</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>1</td>
+      <td>2</td>
+    </tr>
+    <tr>
+      <td>1</td>
+      <td>3</td>
+    </tr>
+  </tbody>
+</table>
 
 If we were to visualize our graph at this point, it would look like this:
 
@@ -196,12 +253,12 @@ WHERE edges.previous_node = 1;
 ```
 
 <figcaption class="text-sm my-4 text-center">
-  Find all `nodes` that are connected to the node with `id` 1 (Bob's id).
+  Find all `nodes` connected to the node with `id` 1 (Bob's id).
 </figcaption>
 
 Looks like Bob is popular! But what if we want to know who Bob's friends are friends with?
 
-Let's insert a few more nodes and edges to demonstrate this:
+Let's insert a few more nodes and edges to show this:
 
 ```sql
 INSERT INTO nodes (data) VALUES ('Sally');
@@ -213,28 +270,83 @@ INSERT INTO edges (previous_node, next_node) VALUES (3, 4);
 INSERT INTO edges (previous_node, next_node) VALUES (4, 5);
 ```
 
-| id  | data  |
-| --- | ----- |
-| 1   | Bob   |
-| 2   | Hank  |
-| 3   | Jeff  |
-| 4   | Sally |
-| 5   | Sue   |
-| 6   | Sam   |
+<table>
+  <thead>
+    <tr>
+      <th colspan="2">nodes</th>
+    </tr>
+    <tr>
+      <th>id</th>
+      <th>data</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>1</td>
+      <td>Bob</td>
+    </tr>
+    <tr>
+      <td>2</td>
+      <td>Hank</td>
+    </tr>
+    <tr>
+      <td>3</td>
+      <td>Jeff</td>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td>Sally</td>
+    </tr>
+    <tr>
+      <td>5</td>
+      <td>Sue</td>
+    </tr>
+    <tr>
+      <td>6</td>
+      <td>Sam</td>
+    </tr>
+  </tbody>
+</table>
 
-| previous_node | next_node |
-| ------------- | --------- |
-| 2             | 4         |
-| 3             | 4         |
-| 4             | 5         |
-| 1             | 2         |
-| 1             | 3         |
+<table>
+  <thead>
+    <tr>
+      <th colspan="2">edges</th>
+    </tr>
+    <tr>
+      <th>previous_node</th>
+      <th>next_node</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>1</td>
+      <td>2</td>
+    </tr>
+    <tr>
+      <td>1</td>
+      <td>3</td>
+    </tr>
+    <tr>
+      <td>2</td>
+      <td>4</td>
+    </tr>
+    <tr>
+      <td>3</td>
+      <td>4</td>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td>5</td>
+    </tr>
+  </tbody>
+</table>
 
-To query for all of Bob’s friends of friends we could extend the previous query to join the `edges` table again, but that would cause a maintenance nightmare having to manually join each “level” in the graph.
+To query for all Bob’s friends of friends we could extend the previous query to join the `edges` table again, but that would cause a maintenance nightmare having to join on each “level” in the graph.
 
-Fortunately, Postgres has a built-in feature that allows us to query graph data without having to know exactly how many joins we need: recursive queries. Recursive queries allow us to traverse the graph starting from a specific node and following its edges until some determined endpoint.
+Postgres has a built-in feature that allows us to query graph data without having to know exactly how many joins we need: [recursive queries](https://www.postgresql.org/docs/current/queries-with.html#QUERIES-WITH-RECURSIVE). Recursive queries allow us to traverse the graph starting from a specific node and following its edges until some determined endpoint.
 
-Writing a recursive query to find all of Bob’s friends and their friends we would write the following SQL:
+Writing a recursive query to find all Bob’s friends and their friends we would write the following SQL:
 
 ```sql
 WITH RECURSIVE friend_of_friend AS (
@@ -256,8 +368,6 @@ A recursive query is made up of two parts: the base case and the recursive case.
 The base case is where we want to start our query.
 The recursive case is the "loop" that will continue to run until some endpoint is reached.
 
-_eg._
-
 ```sql
 WITH RECURSIVE {name} AS (
   {base case}
@@ -266,9 +376,15 @@ WITH RECURSIVE {name} AS (
 )
 ```
 
-In our example we want to start our query with Bob's friends, so we find the edges where Bob (id: 1) is the `previous_node` and select the `next_node`.
-Then we will use the recursive case to recursively join the `edges` table to itself until we reach the end of Bob's graph.
-Finally, we need to query the `nodes` that are associated with the edges from the recursive query to get each of Bob's friends' names.
+<div class="flex flex-col items-center justify-center mb-4 mt-2">
+  <figcaption class="text-sm text-center">
+    The basic SQL structure of a recursive query.
+  </figcaption>
+</div>
+
+In our example we want to start our query with Bob's friends, so we find the edges where Bob (id: 1) is the `previous_node`.
+Then in the recursive case we continually join the `edges` table to itself until we reach the end of Bob's graph (eg. when we reach `friend_of_friend.next_node = NULL`).
+Finally outside our recursive query we bring it all together. We need to query the `nodes` that are associated with the edges from the recursive query so we can get each of Bob's friends' names.
 
 | data  |
 | ----- |
@@ -278,5 +394,7 @@ Finally, we need to query the `nodes` that are associated with the edges from th
 
 ## Conclusion
 
-By using features built into Postgres, we can easily store and query graph data structures.
-If you are already using Postgres for your relational data, you can easily integrate graph data structures into your existing database without adding additional systems.
+By using features built into Postgres, we can store and query graph data structures.
+We used a similar approach in my previous job to dynamically generate work instructions on a manufacturing line.
+Based on parameters given, and rules defined on each edge, we could generate the correct document by traversing a graph stored entirely in Postgres.
+If you are already using Postgres for your relational data, you can integrate graph data structures into your existing database without adding extra systems!
