fix: cleanup mobile menu

--- a/src/content/post/postgres-is-a-graph-database/index.mdx
+++ b/src/content/post/postgres-is-a-graph-database/index.mdx
@@ -20,7 +20,8 @@ where each node represents an entity or _"thing"_, and each edge represents the 
     version="1.1"
     xmlns="http://www.w3.org/2000/svg"
     viewBox="0 0 733 741" 
-    width="500"
+    width="100%"
+    maxWidth="500px"
     class="dark:fill-slate-100 dark:stroke-slate-100 stroke-black fill-white">
     <g
       stroke-linecap="round"
