feat: llm article updates

--- a/src/content/post/improve-your-prompts-llms/index.mdx
+++ b/src/content/post/improve-your-prompts-llms/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Improve Your Prompts for LLMs: Simple and Effective Techniques"
-tags: ["LLMs", "ChatGPT", "Bing", "AI"]
+tags: ["LLMs", "ChatGPT", "Bing", "Bard", "AI", "Prompt Engineering"]
 date: "2023-05-09"
 published: false
 ---
@@ -8,13 +8,13 @@ published: false
 Tools like ChatGPT and Bing have been skyrocketing in popularity.
 ChatGPT took five days since launch to [reach 1 million users](https://twitter.com/rauchg/status/1655950701951082497?s=20).
 Governments all over the world are trying to [figure out](https://www.asahi.com/ajw/articles/14903078) what to do [with this technology](https://www.bbc.com/news/technology-65139406).
-And, sweet [AI generated images](https://www.theguardian.com/technology/2022/nov/12/when-ai-can-make-art-what-does-it-mean-for-creativity-dall-e-midjourney) are showing up everywhere; like this dog I generated using Bing:
+Sweet [AI generated images](https://www.theguardian.com/technology/2022/nov/12/when-ai-can-make-art-what-does-it-mean-for-creativity-dall-e-midjourney) are showing up everywhere; like this dog I generated using Bing:
 
 ![AI generated picture of a astronaut dog jumping over a fire on the moon](/posts/improve-prompts-llm/dog-fire.jpeg)
 
 <figcaption class="text-sm mb-4 text-center">
-  The prompt used: "Can you generate a picture of a astronaut dog jumping over a
-  fire on the moon?"
+  "Can you generate a picture of a astronaut dog jumping over a fire on the
+  moon?"
 </figcaption>
 
 Though LLM's (Large Language Models) are still in their infancy, research has shown some [pretty big productivity boosts](https://www.oneusefulthing.org/p/secret-cyborgs-the-present-disruption) in range of different professions.
@@ -25,13 +25,21 @@ This is all to say that LLM's are a tool we'll need to learn to use, and use wel
 There are quite a few options for LLM's out there, with the most popular being ChatGPT and Bing.
 OpenAI's [ChatGPT](https://chat.openai.com/) is the most well known, but if we want to use the latest features like ChatGPT-4 (an upgrade to ChatGPT-3) we'll need to pay $20 a month.
 Microsoft has released new [Bing](https://www.bing.com/new) that takes advantage of ChatGPT-4 behind the scenes, and is free to use.
-Both offerings come with their own pros and cons.
+Finally, Google has [Bard](https://bard.google.com/) which is also free to use.
+All offerings come with their own pros and cons.
 
 Regardless of which tool you use, the question remains: how do we get the most out of these tools?
 
 ## Prompt Engineering
 
+We interact with LLM's by giving them a prompt in the form of a question or instruction--a prompt instructs the LLM on what to do.
+Prompt Engineering is a term coined to describe the process of writing prompts to get the best results from LLM's.
+Just like in everyday conversation, the words we choose to ask a question can dramatically change the response we get.
+
 ### Constraints
+
+_"Grab me that red stuff?"_ vs. _"Can you bring me the ketchup from the fridge?"_ Which question is more likely to get you the ketchup?
+Just like people, LLM's need constraints and clarity to understand what we're asking. Be specific when writing prompts.
 
 ### Role prompting, or "Act like a..."
 
